--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,42 +1,6 @@
-<div class="trending">
-  <div class="title">TRENDING</div>
-  <carousel [cellWidth]="300">
-    <div
-      class="trending-shows carousel-cell"
-      *ngFor="let item of trendingshows"
-    >
-      <!-- {{ item.title }} -->
-      <img
-        class="thumbnail"
-        (click)="displaytitle(item)"
-        src="{{ getimage(item) }}"
-      />
-    </div>
-  </carousel>
-</div>
-
-<div class="trending">
-  <div class="title">COMING SOON</div>
-  <div class="trending-shows" *ngFor="let item of comingsoon">
-    <!-- {{ item.title }} -->
-    <img
-      class="thumbnail"
-      (click)="displaytitle(item)"
-      src="{{ getimage(item) }}"
-    />
+<div *ngIf="isfetched">
+  <div *ngFor="let item of myshows">
+    <div class="title">{{ item.titles.default }}</div>
+    <app-display [item]="item"> </app-display>
   </div>
-</div>
-
-<div class="trending">
-  <div class="title">DRAMA</div>
-  <carousel>
-    <div class="trending-shows carousel-cell" *ngFor="let item of drama">
-      <!-- {{ item.title }} -->
-      <img
-        class="thumbnail"
-        (click)="displaytitle(item)"
-        src="{{ getimage(item) }}"
-      />
-    </div>
-  </carousel>
 </div>
