--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="isfetched">
-  <div *ngFor="let item of myshows">
-    <div class="title">{{ item.titles.default }}</div>
+  <div *ngFor="let item of allshows">
+    <div class="title">{{ item.titles.default | uppercase }}</div>
     <app-display [item]="item"> </app-display>
   </div>
 </div>
